--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,11 @@ dependencies:
   mime: ^2.0.0
   file_picker: ^9.1.0
   fl_chart: ^1.0.0
+  dash_chat_2: ^0.0.21
+
+
+dependency_overrides:
+  intl: 0.20.2
 
 dev_dependencies:
   flutter_test:
