--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   file_picker: ^9.1.0
   fl_chart: ^1.0.0
   dash_chat_2: ^0.0.21
+  google_maps_flutter: ^2.12.0
+  google_places_flutter: ^2.1.0
+  geocoding: ^3.0.0
+  geolocator: ^13.0.2
+  permission_handler: ^11.4.0
 
 
 dependency_overrides:
