--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   geocoding: ^3.0.0
   geolocator: ^13.0.2
   permission_handler: ^11.4.0
+  cached_network_image: ^3.4.1
 
 
 dependency_overrides:
