--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   geolocator: ^13.0.2
   permission_handler: ^11.4.0
   cached_network_image: ^3.4.1
+  image_picker: ^1.1.2
 
 
 dependency_overrides:
